--- a/style.css
+++ b/style.css
@@ -5,15 +5,12 @@ html, body{
     word-spacing:10%;
     letter-spacing:0.1em;
     line-height:2em;
-    background-color: rgb(30, 20, 71);
-    margin: 0px;
-    padding: 0px;
-    color: rgb(255,255,255);
+    background-color: rgb(0, 0, 0);
 }
 
- 
-canvas {
+#processingsection{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 10px;
-    margin: 0px; 
+    border: 25px solid rgb(10, 6, 80);
+    border-radius: 25px;
 }
